crates/review-buddy/tests/snapshots/frames__frame_1a_three_panes_afterglow_dark_100x30.snap
---
source: crates/review-buddy/tests/frames.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                       Afterglow Dark
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮
│  Waiting on you · 2                                                                              │
│▌ ◐ Add a menu bar and keyboard-driven menus                                                   2h │
│▌ GH review-buddy#214 · ada · review requested                           ¶3   2 open   CI running │
│  ● Raise muted text contrast in the light theme                                               5h │
│  GH review-buddy#209 · jo · approved by you                ✓1  ✕1       ¶3                       │
│                                                                                                  │
│  Worth a look · 2                                                                                │
│  ✕ Cache pipeline status lookups                                                              7h │
│  GL flow!1182 · priya · you're mentioned                           ○1                 CI failing │
│  ● Tidy zsh startup                                                                           1d │
│  GH dotfiles#31 · smorris · yours                          ✓1      ○1   ¶5   2 open              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ liminal-hq/review-buddy#214 ────────────────────────────────────────────────────────────────── ▼ ╮
│ Add a menu bar and keyboard-driven menus                                                         │
│ ada wants ada/menus → main                                                                       │
│ +32 −1 · 3 files · opened 3d ago                                                                 │
│ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                         │
│  Overview   Files 3   Checks 6   Conversation 3                                                  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────── │
│ Adds a menu bar along the top and a Menu type that tracks the selected item.                     │
│                                                                                                  │
│ • Menu::select_next and Menu::select_prev move the highlight                                     │
│ • Menu::activate returns the action for the highlighted item                                     │
│ • The bar itself is a plain Line, so it picks up the active theme                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
