crates/review-buddy/tests/snapshots/frames__frame_1a_three_panes_afterglow_dark_160x40.snap
---
source: crates/review-buddy/tests/frames.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                   Afterglow Dark
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-buddy#214 ───────────────────────────────────────────────────────╮
│▌ ● All               7 ││  Waiting on you · 2                          ││ Add a menu bar and keyboard-driven menus                                           │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driven me… 2h ││ ada wants ada/menus → main                                                         │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested││ +32 −1 · 3 files · opened 3d ago                                                   │
│    github.com          ││  ● Raise muted text contrast in the ligh… 5h ││                                                                                    │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                           │
│    github.com          ││                                              ││                                                                                    │
│  ● platform          2 ││  Worth a look · 2                            ││  Overview   Files 3   Checks 6   Conversation 3                                    │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups          7h ││ ────────────────────────────────────────────────────────────────────────────────── │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned     ││ Adds a menu bar along the top and a Menu type that tracks the selected item.       │
│    gitlab.com          ││  ● Tidy zsh startup                       1d ││                                                                                    │
│                        ││  GH dotfiles#31 · smorris · yours            ││ • Menu::select_next and Menu::select_prev move the highlight                       │
│                        ││                                              ││ • Menu::activate returns the action for the highlighted item                       │
│                        ││  Can wait · 1                                ││ • The bar itself is a plain Line, so it picks up the active theme                  │
│                        ││  · Clarify the install steps              3d ││                                                                                    │
│                        ││  GL notes!12 · kai · approved by you         ││ Reviewers                                Checks                                    │
│                        ││                                              ││ ◌ smorris requested                      ● 2 passing  ◐ 1 running                  │
│                        ││  ▸ Noise · 2 bot updates · ⏎ to expand       ││ ✎ jo commented                           ○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled   │
│                        ││                                              ││                                                                                    │
│                        ││  ── That's everything.                       ││ Latest comment                                                                     │
│                        ││  7 in this view.                             ││ jo · 5h ago · menubar.rs:7                                                         │
│                        ││                                              ││ These three lines could be one join. Is the intermediate Vec doing anything for    │
│                        ││                                              ││ us?                                                                                │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││ Your review  not started                                                           │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  ? help  T theme  q quit
