crates/review-buddy/tests/snapshots/frames__frame_1a_three_panes_no_color_100x30.snap
---
source: crates/review-buddy/tests/frames.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  demo · 4 sources · 7 changes                                           Liminal HQ
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-buddy#214 ─────────────────────╮
│  Waiting on you · 2                          ││ Add a menu bar and keyboard-driven menus         │
│▌ ◐ Add a menu bar and keyboard-driven me… 2h ││ ada wants ada/menus → main                       │
│▌ GH review-buddy#214 · ada · review requested││ +32 −1 · 3 files · opened 3d ago                 │
│  ● Raise muted text contrast in the ligh… 5h ││                                                  │
│  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff  │
│                                              ││                                                  │
│  Worth a look · 2                            ││  Overview   Files 3   Checks 6   Conversation 3  │
│  ✕ Cache pipeline status lookups          7h ││ ──────────────────────────────────────────────── │
│  GL flow!1182 · priya · you're mentioned     ││ Adds a menu bar along the top and a Menu type    │
│  ● Tidy zsh startup                       1d ││ that tracks the selected item.                   │
│  GH dotfiles#31 · smorris · yours            ││                                                  │
│                                              ││ • Menu::select_next and Menu::select_prev move   │
│  Can wait · 1                                ││ the highlight                                    │
│  · Clarify the install steps              3d ││ • Menu::activate returns the action for the      │
│  GL notes!12 · kai · approved by you         ││ highlighted item                                 │
│                                              ││ • The bar itself is a plain Line, so it picks up │
│  ▸ Noise · 2 bot updates · ⏎ to expand       ││ …                                                │
│                                              ││                                                  │
│  ── That's everything.                       ││ Reviewers                                        │
│  7 in this view.                             ││ ◌ smorris requested                              │
│                                              ││ ✎ jo commented                                   │
│                                              ││                                                  │
│                                              ││ Checks                                           │
│                                              ││ ● 2 passing  ◐ 1 running                         │
│                                              ││ ○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled          │
╰──────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  demo · 4 sources · 7 changes"
0:88 D " Liminal HQ"
1:1 BR " 1 ● All 7"
1:13 BD " 2"
1:16 D "● liminal-hq 3"
1:32 BD " 3"
1:35 D "● smorris 1"
1:48 BD " 4"
1:51 D "● platform 2"
1:65 BD " 5"
1:68 D "● gitlab.com 1"
2:0 B "╭ queue ───────────────────────────────────────╮"
2:48 D "╭ liminal-hq/review-buddy#214 ─────────────────────╮"
3:0 B "│"
3:3 B "Waiting on you"
3:17 D " · 2"
3:47 B "│"
3:48 D "│"
3:50 B "Add a menu bar and keyboard-driven menus"
3:99 D "│"
4:0 B "│"
4:1 BR "▌"
4:3 R "◐"
4:5 BR "Add a menu bar and keyboard-driven me…"
4:43 R ""
4:44 DR "2h"
4:47 B "│"
4:48 D "│"
4:53 D " wants"
4:69 D " →"
4:99 D "│"
5:0 B "│"
5:1 BR "▌"
5:3 R "GH review-buddy#214"
5:22 DR " ·"
5:25 R "ada"
5:28 DR " · review requested"
5:47 B "│"
5:48 D "│"
5:54 B "−1"
5:56 D " · 3 files · opened 3d ago"
5:99 D "│"
6:0 B "│"
6:44 D "5h"
6:47 B "│"
6:48 D "│"
6:99 D "│"
7:0 B "│"
7:22 D " ·"
7:27 D " · approved by you"
7:47 B "│"
7:48 D "│"
7:50 B "a"
7:61 B "x"
7:80 B "c"
7:91 B "⏎"
7:99 D "│"
8:0 B "│"
8:47 B "│"
8:48 D "│"
8:99 D "│"
9:0 B "│"
9:3 B "Worth a look"
9:15 D " · 2"
9:47 B "│"
9:48 D "│"
9:50 BR " Overview"
9:61 D " Files 3"
9:71 D " Checks 6"
9:82 D " Conversation 3"
9:99 D "│"
10:0 B "│"
10:3 B "✕"
10:44 D "7h"
10:47 B "│"
10:48 D "│"
10:50 D "────────────────────────────────────────────────"
10:99 D "│"
11:0 B "│"
11:15 D " ·"
11:23 D " · you're mentioned"
11:47 B "│"
11:48 D "│"
11:99 D "│"
12:0 B "│"
12:44 D "1d"
12:47 B "│"
12:48 D "│"
12:99 D "│"
13:0 B "│"
13:17 D " ·"
13:27 D " · yours"
13:47 B "│"
13:48 D "│"
13:99 D "│"
14:0 B "│"
14:47 B "│"
14:48 D "│"
14:99 D "│"
15:0 B "│"
15:3 B "Can wait"
15:11 D " · 1"
15:47 B "│"
15:48 D "│"
15:99 D "│"
16:0 B "│"
16:3 D "·"
16:44 D "3d"
16:47 B "│"
16:48 D "│"
16:99 D "│"
17:0 B "│"
17:14 D " ·"
17:20 D " · approved by you"
17:47 B "│"
17:48 D "│"
17:99 D "│"
18:0 B "│"
18:47 B "│"
18:48 D "│"
18:99 D "│"
19:0 B "│"
19:3 D "▸ Noise · 2 bot updates · ⏎ to expand"
19:47 B "│"
19:48 D "│"
19:50 D "…"
19:99 D "│"
20:0 B "│"
20:47 B "│"
20:48 D "│"
20:99 D "│"
21:0 B "│"
21:3 D "── That's everything."
21:47 B "│"
21:48 D "│"
21:50 BD "Reviewers"
21:99 D "│"
22:0 B "│"
22:3 D "7 in this view."
22:47 B "│"
22:48 D "│"
22:50 D "◌"
22:59 D " requested"
22:99 D "│"
23:0 B "│"
23:47 B "│"
23:48 D "│"
23:54 D " commented"
23:99 D "│"
24:0 B "│"
24:47 B "│"
24:48 D "│"
24:99 D "│"
25:0 B "│"
25:47 B "│"
25:48 D "│"
25:50 BD "Checks"
25:99 D "│"
26:0 B "│"
26:47 B "│"
26:48 D "│"
26:99 D "│"
27:0 B "│"
27:47 B "│"
27:48 D "│"
27:50 D "○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled"
27:99 D "│"
28:0 B "╰──────────────────────────────────────────────╯"
28:48 D "╰──────────────────────────────────────────────────╯"
29:1 B "⏎"
29:2 D " diff"
29:9 B "o"
29:10 D " open"
29:17 B "y"
29:18 D " copy"
29:25 B "s"
29:26 D " show filters"
29:41 B "?"
29:42 D " help"
29:49 B "T"
29:50 D " theme"
29:58 B "q"
29:59 D " quit"
